--- a/src/App.css
+++ b/src/App.css
@@ -140,7 +140,7 @@ a {
   top: -50px;
   width: 20px;
   height: 20px;
-  background-image: url('/flower.png');
+  background-image: url('/public/flower.png');
   background-size: cover;
   animation: fall linear infinite;
 }
