--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,17 @@
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  background-color: #e6f2ff; /* Light blue background */
+}
+
 /* Container and Card Styles */
 .container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  min-height: 100vh;
-  background-color: #e6f2ff; /* Light blue background */
-  padding: 0px;
+  min-height: 100vh; /* Ensures the container takes full height */
+  padding: 20px;
 }
 
 .main-heading {
