--- a/src/App.css
+++ b/src/App.css
@@ -99,7 +99,21 @@ html, body {
   cursor: pointer;
   font-size: 1.25em;
 }
+.language-btn{
+  cursor: pointer;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  color: #ffffff;
+  background-color: #da0069;
+  border: 1px solid #da0069;
+  padding: 8px;
+  margin: 5px;
+  font-size: 1
 
+}
 .call-button {
   background-color: #4caf50; /* Green background */
   color: white;
